src/stylesheets/layouts/_menu.scss
.menu {
  list-style: none;

  position: fixed;
  bottom: 50px;
  left: 50%;

  display: flex;
  flex-direction: row;

  transform: translateX(-50%);

  &-item {
    display: block;

    margin: 0 2px;
    padding: 5px;

    border: 1px solid #ff0;

    &-active {
      background-color: #ff0;
    }
  }
}

